--- a/settings.html
+++ b/settings.html
@@ -10,7 +10,12 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp"
       rel="stylesheet"
     />
-
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -44,7 +49,7 @@
         </div>
       </div>
     </nav>
-    <main>
+    <main class="sean">
       <aside>
         <button id="close-btn">
           <span class="material-icons-sharp">close</span>
@@ -93,6 +98,67 @@
           <a href="#">Update Now</a>
         </div>
       </aside>
+      <div class="container">
+        <div class="d-flex align-items-center">
+          <img src="/assets/img/profile-1.jpg" alt="#" class="settings-img" />
+          <div>
+            <h2 class="text-uppercase fs-md-3 fs-sm-6">update your picture</h2>
+            <p class="fs-2 text-capitalize">upload picture under 2mb</p>
+            <div class="d-flex flex-md-row flex-sm-column">
+              <button class="btn btn-primary text-capitalize me-md-2 me-sm-0">
+                upload photo
+              </button>
+              <button class="btn btn-danger text-capitalize">
+                delete current picture
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="bg-white p-5 mt-5 rounded">
+          <div class="row">
+            <div class="col-md-6 col-sm-12">
+              <h6 class="fs-1 text-capitalize">first name</h6>
+              <p class="fs-3 text-capitalize bg-primary-subtle text-white p-2">
+                abubakar
+              </p>
+            </div>
+            <div class="col-md-6 col-sm-12">
+              <h6 class="fs-1 text-capitalize">last name</h6>
+              <p class="fs-3 text-capitalize bg-primary-subtle text-white p-2">
+                abubakar
+              </p>
+            </div>
+            <div class="col-md-6 col-sm-12">
+              <h6 class="fs-1 text-capitalize">username</h6>
+              <p class="fs-3 text-capitalize bg-primary-subtle text-white p-2">
+                abubakar
+              </p>
+            </div>
+            <div class="col-md-6 col-sm-12">
+              <h6 class="fs-1 text-capitalize">password</h6>
+              <p class="fs-3 text-capitalize bg-primary-subtle text-white p-2">
+                *********
+              </p>
+            </div>
+            <div class="col-md-6 col-sm-12">
+              <h6 class="fs-1 text-capitalize">email</h6>
+              <p class="fs-3 text-capitalize bg-primary-subtle text-white p-2">
+                johndoe@gmail.com
+              </p>
+            </div>
+            <div class="col-md-6 col-sm-12">
+              <h6 class="fs-1 text-capitalize">phone</h6>
+              <p class="fs-3 text-capitalize bg-primary-subtle text-white p-2">
+                +1427593030209
+              </p>
+            </div>
+            <div class="col-md-4 col-sm-8">
+              <button class="btn btn-danger text-capitalize btn-lg ">delete my account now</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
+    <script src="/res.js"></script>
   </body>
 </html>
