--- a/help.html
+++ b/help.html
@@ -10,7 +10,12 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp"
       rel="stylesheet"
     />
-
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -44,7 +49,7 @@
         </div>
       </div>
     </nav>
-    <main>
+    <main class="sean">
       <aside>
         <button id="close-btn">
           <span class="material-icons-sharp">close</span>
@@ -55,7 +60,7 @@
             <span class="material-icons-sharp">dashboard</span>
             <h4>Dashboard</h4>
           </a>
-          <a href="/exchange.html"  >
+          <a href="/exchange.html">
             <span class="material-icons-sharp">currency_exchange</span>
             <h4>Exchange</h4>
           </a>
@@ -93,6 +98,72 @@
           <a href="#">Update Now</a>
         </div>
       </aside>
+      <div>
+        <h2 class="text-center my-5 text-capitalize fs-2">help</h2>
+        <div class="bg-white p-5 rounded">
+          <form>
+            <div class="row">
+              <div class="mb-3 col-md-6 col-sm-12">
+                <label for="exampleFormControlInput1" class="form-label fs-3"
+                  >Name</label
+                >
+                <input
+                  type="text"
+                  class="form-control py-3 fs-5"
+                  id="exampleFormControlInput1"
+                  placeholder="name@example.com"
+                />
+              </div>
+              <div class="mb-3 col-md-6 col-sm-12">
+                <label for="exampleFormControlInput1" class="form-label fs-3"
+                  >Email address</label
+                >
+                <input
+                  type="email"
+                  class="form-control py-3 fs-5"
+                  id="exampleFormControlInput1"
+                  placeholder="name@example.com"
+                />
+              </div>
+            </div>
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label fs-3"
+                >Problem Title</label
+              >
+              <input
+                type="email"
+                class="form-control py-3 fs-5"
+                id="exampleFormControlInput1"
+                placeholder="name@example.com"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label fs-3"
+                >Accound ID</label
+              >
+              <input
+                type="email"
+                class="form-control py-3 fs-5"
+                id="exampleFormControlInput1"
+                placeholder="name@example.com"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label fs-3"
+                >Description</label
+              >
+              <textarea
+                type="email"
+                class="form-control py-3 fs-5"
+                id="exampleFormControlInput1"
+                placeholder="name@example.com"
+                rows="10"
+              ></textarea>
+            </div>
+            <button class=" text-capitalize px-5 btn btn-primary fs-4 mt-3 w-full">submit</button>
+          </form>
+        </div>
+      </div>
     </main>
   </body>
 </html>
