--- a/analytics.html
+++ b/analytics.html
@@ -130,7 +130,9 @@
               29374, 33537, 49631, 59095, 59095, 36684, 33572, 39974, 48847,
               48116, 61004,
             ],
-            borderColor: "red",
+            backgroundColor: ["rgba(255, 205, 86, 0.2)"],
+
+            borderColor: "rgba(255, 205, 86, 0.2)",
             borderWidth: 2,
           },
           {
@@ -139,7 +141,8 @@
               31500, 41000, 88800, 26000, 46000, 32698, 5000, 3000, 18656,
               24832, 36844,
             ],
-            borderColor: "blue",
+            backgroundColor: ["rgba(201, 203, 207, 0.2)"],
+            borderColor: "rgba(201, 203, 207, 0.2)",
             borderWidth: 2,
           },
           {
@@ -148,17 +151,9 @@
               31500, 33537, 88800, 26000, 46000, 32698, 5000, 3000, 18656,
               24832, 36844,
             ],
-            backgroundColor: [
-              "rgba(255, 99, 132, 0.2)",
-              "rgba(255, 159, 64, 0.2)",
-              "rgba(255, 205, 86, 0.2)",
-              "rgba(75, 192, 192, 0.2)",
-              "rgba(54, 162, 235, 0.2)",
-              "rgba(153, 102, 255, 0.2)",
-              "rgba(201, 203, 207, 0.2)",
-            ],
-            borderColor: "green",
-            borderWidth: 2,
+            backgroundColor: ["rgba(75, 192, 192, 0.2)"],
+            borderColor: "rgba(75, 192, 192, 0.2)",
+            borderWidth: 1,
           },
         ],
       },
