--- a/wallet.html
+++ b/wallet.html
@@ -10,6 +10,12 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -44,7 +50,7 @@
         </div>
       </div>
     </nav>
-    <main>
+    <main class="sean">
       <aside>
         <button id="close-btn">
           <span class="material-icons-sharp">close</span>
@@ -93,6 +99,122 @@
           <a href="#">Update Now</a>
         </div>
       </aside>
+      <div class="container">
+        <div class="row">
+          <div class="col-12 bg-success-subtle rounded-3 p-5">
+            <p class="fs-4 text-capitalize">total estimated value</p>
+            <div class="d-flex align-items-center justify-content-between">
+              <h2 class="fs-1">30,045,124 <span class="fs-5">usdt</span></h2>
+              <span class="material-icons-sharp"> trending_up </span>
+            </div>
+          </div>
+        </div>
+        <div class="row my-4 gap-3">
+          <div
+            class="col-md-4 col-sm-12 shadow p-3 bg-body-tertiary rounded d-flex flex-column align-items-center justify-content-center"
+          >
+            <span class="material-icons-sharp"> upgrade </span>
+            <p class="fs-2 text-capitalize">send</p>
+          </div>
+          <div
+            class="col-md-3 col-sm-12 shadow p-3 bg-body-tertiary rounded d-flex flex-column align-items-center justify-content-center"
+          >
+            <span class="material-icons-sharp"> loop </span>
+            <p class="fs-2 text-capitalize">convert</p>
+          </div>
+          <div
+            class="col-md-4 col-sm-12 shadow p-3 bg-body-tertiary rounded d-flex flex-column align-items-center justify-content-center"
+          >
+            <span class="material-icons-sharp"> vertical_align_bottom </span>
+            <p class="fs-2 text-capitalize">deposit</p>
+          </div>
+        </div>
+        <div class="row gap-4">
+          <h2 class="my-4 text-capitalize text-center fs-2">my assets</h2>
+          <div
+            class="col-12 d-flex align-items-center justify-content-between shadow p-4 rounded-3"
+          >
+            <div class="d-flex align-items-center gap-3">
+              <div class="bg-success-subtle p-3 rounded-5">
+                <img
+                  src="/assets/img/BTC.png"
+                  alt="#"
+                  class="img-fluid"
+                  style="width: 30px"
+                />
+              </div>
+              <div>
+                <h4 class="fs-3 text-capitalize mb-1">bitcoin</h4>
+                <p class="mb-0 text-uppercase">btc</p>
+              </div>
+            </div>
+            <div>
+              <h6 class="mb-0 fs-3">$21,234</h6>
+              <span class="fs-4"
+                >$1,324
+                <span class="material-icons-sharp text-success">
+                  arrow_upward
+                </span></span
+              >
+            </div>
+          </div>
+          <div
+            class="col-12 d-flex align-items-center justify-content-between shadow p-4 rounded-3"
+          >
+            <div class="d-flex align-items-center gap-3">
+              <div class="bg-primary-subtle p-3 rounded-5">
+                <img
+                  src="/assets/img/EURO.png"
+                  alt="#"
+                  class="img-fluid"
+                  style="width: 30px"
+                />
+              </div>
+              <div>
+                <h4 class="fs-3 text-capitalize mb-1"></h4>
+                euro
+                <p class="mb-0 text-uppercase">eu</p>
+              </div>
+            </div>
+            <div>
+              <h6 class="mb-0 fs-3">$1,234</h6>
+              <span class="fs-4"
+                >$324
+                <span class="material-icons-sharp text-danger">
+                  arrow_downward
+                </span></span
+              >
+            </div>
+          </div>
+          <div
+            class="col-12 d-flex align-items-center justify-content-between shadow p-4 rounded-3"
+          >
+            <div class="d-flex align-items-center gap-3">
+              <div class="bg-danger-subtle p-3 rounded-5">
+                <img
+                  src="/assets/img/ETH.png"
+                  alt="#"
+                  class="img-fluid"
+                  style="width: 30px"
+                />
+              </div>
+              <div>
+                <h4 class="fs-3 text-capitalize mb-1">etherum</h4>
+                <p class="mb-0 text-uppercase">eth</p>
+              </div>
+            </div>
+            <div>
+              <h6 class="mb-0 fs-3">$21,234</h6>
+              <span class="fs-4"
+                >$1,324
+                <span class="material-icons-sharp text-success">
+                  arrow_upward
+                </span></span
+              >
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
