--- a/analytics.html
+++ b/analytics.html
@@ -96,6 +96,7 @@
       <canvas id="chart"></canvas>
     </main>
   </body>
+  <script src="/res.js"></script>
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.6.0/chart.min.js"
     integrity="sha512-GMGzUEevhWh8Tc/njS0bDpwgxdCJLQBWG3Z2Ct+JGOpVnEmjvNx6ts4v6A2XJf1HOrtOsfhv3hBKpK9kE5z8AQ=="
