--- a/settings.html
+++ b/settings.html
@@ -104,7 +104,7 @@
           <div>
             <h2 class="text-uppercase fs-md-3 fs-sm-6">update your picture</h2>
             <p class="fs-2 text-capitalize">upload picture under 2mb</p>
-            <div class="d-flex flex-md-row flex-sm-column">
+            <div class="d-flex flex-column flex-sm-row">
               <button class="btn btn-primary text-capitalize me-md-2 me-sm-0">
                 upload photo
               </button>
