--- a/wallet.html
+++ b/wallet.html
@@ -104,8 +104,10 @@
           <div class="col-12 bg-success-subtle rounded-3 p-5">
             <p class="fs-4 text-capitalize">total estimated value</p>
             <div class="d-flex align-items-center justify-content-between">
-              <h2 class="fs-1">30,045,124 <span class="fs-5">usdt</span></h2>
-              <span class="material-icons-sharp"> trending_up </span>
+              <h2 class="fs-1 text-black">
+                30,045,124 <span class="fs-5">usdt</span>
+              </h2>
+              <span class="material-icons-sharp text-black"> trending_up </span>
             </div>
           </div>
         </div>
@@ -113,20 +115,22 @@
           <div
             class="col-md-4 col-sm-12 shadow p-3 bg-body-tertiary rounded d-flex flex-column align-items-center justify-content-center"
           >
-            <span class="material-icons-sharp"> upgrade </span>
-            <p class="fs-2 text-capitalize">send</p>
+            <span class="material-icons-sharp text-black"> upgrade </span>
+            <p class="fs-2 text-capitalize text-black">send</p>
           </div>
           <div
             class="col-md-3 col-sm-12 shadow p-3 bg-body-tertiary rounded d-flex flex-column align-items-center justify-content-center"
           >
-            <span class="material-icons-sharp"> loop </span>
-            <p class="fs-2 text-capitalize">convert</p>
+            <span class="material-icons-sharp text-black"> loop </span>
+            <p class="fs-2 text-capitalize text-black">convert</p>
           </div>
           <div
             class="col-md-4 col-sm-12 shadow p-3 bg-body-tertiary rounded d-flex flex-column align-items-center justify-content-center"
           >
-            <span class="material-icons-sharp"> vertical_align_bottom </span>
-            <p class="fs-2 text-capitalize">deposit</p>
+            <span class="material-icons-sharp text-black">
+              vertical_align_bottom
+            </span>
+            <p class="fs-2 text-capitalize text-black">deposit</p>
           </div>
         </div>
         <div class="row gap-4">
@@ -216,5 +220,6 @@
         </div>
       </div>
     </main>
+    <script src="/res.js"></script>
   </body>
 </html>
