--- a/exchange.html
+++ b/exchange.html
@@ -193,8 +193,8 @@
         <div class="row mt-5">
           <div class="col-md-3 col-sm-12">
             <div class="d-flex justify-content-between align-content-center bg-dark-subtle p-5 rounded-3">
-              <h5 class="text-uppercase">exchange fees</h5>
-              <p>$40</p>
+              <h5 class="text-uppercase text-black">exchange fees</h5>
+              <p class="text-black">$40</p>
             </div>
           </div>
         </div>
