--- a/index.html
+++ b/index.html
@@ -544,7 +544,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-
-    <script src="./main.js"></script>
   </body>
+
+  <script src="./main.js"></script>
+  <script src="./res.js"></script>
 </html>
