--- a/transaction.html
+++ b/transaction.html
@@ -10,6 +10,12 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,7 +24,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <nav>
@@ -44,7 +50,7 @@
         </div>
       </div>
     </nav>
-    <main>
+    <main class="sean">
       <aside>
         <button id="close-btn">
           <span class="material-icons-sharp">close</span>
@@ -55,7 +61,7 @@
             <span class="material-icons-sharp">dashboard</span>
             <h4>Dashboard</h4>
           </a>
-          <a href="/exchange.html" >
+          <a href="/exchange.html">
             <span class="material-icons-sharp">currency_exchange</span>
             <h4>Exchange</h4>
           </a>
@@ -63,7 +69,7 @@
             <span class="material-icons-sharp">account_balance_wallet</span>
             <h4>Wallet</h4>
           </a>
-          <a href="/transaction.html"  class="active">
+          <a href="/transaction.html" class="active">
             <span class="material-icons-sharp">payment</span>
             <h4>Transactions</h4>
           </a>
@@ -93,6 +99,95 @@
           <a href="#">Update Now</a>
         </div>
       </aside>
+      <div class="my-5">
+        <h2 class="mb-5 text-uppercase text-center fs-3">all transactions</h2>
+        <!-- TRANSACTION 1 -->
+        <div class="d-flex align-items-center justify-content-between mb-5">
+          <div class="d-flex align-items-center gap-3">
+            <div class="bg-primary-subtle d-flex align-items-center justify-content-center p-2 rounded-2">
+              <span class="material-icons-sharp fs-1">sports_esports</span>
+            </div>
+            <div>
+              <h4 class="fs-4 mb-0">Games</h4>
+              <p class="fs-6 mb-0">15.11.2021</p>
+            </div>
+          </div>
+          <div class="d-flex gap-3">
+            <div class="bg-primary d-flex align-items-center justify-content-center px-2 rounded-3">
+              <img src="./assets/img/visa.png" class="img-fluid" style="width: 60px; "/>
+            </div>
+            <div>
+              <p class="fs-5 mb-0">*1920</p>
+              <small class="fs-6 fs-lg-4">Credit Card</small>
+            </div>
+          </div>
+          <h4 class="mb-0 fs-4">-$50</h4>
+        </div>
+        <div class="d-flex align-items-center justify-content-between mb-5">
+          <div class="d-flex align-items-center gap-3">
+            <div class="bg-danger-subtle d-flex align-items-center justify-content-center p-2 rounded-2">
+              <span class="material-icons-sharp fs-1">restaurant</span>
+            </div>
+            <div>
+              <h4 class="fs-4 mb-0">Restaurant</h4>
+              <p class="fs-6 mb-0">15.11.2021</p>
+            </div>
+          </div>
+          <div class="d-flex gap-3">
+            <div class="bg-danger d-flex align-items-center justify-content-center px-2 rounded-3">
+              <img src="./assets/img/visa.png" class="img-fluid" style="width: 60px; "/>
+            </div>
+            <div>
+              <p class="fs-5 mb-0">*1920</p>
+              <small class="fs-6 fs-lg-4">Credit Card</small>
+            </div>
+          </div>
+          <h4 class="mb-0 fs-4">-$100</h4>
+        </div>
+        <div class="d-flex align-items-center justify-content-between mb-5">
+          <div class="d-flex align-items-center gap-3">
+            <div class="bg-success-subtle d-flex align-items-center justify-content-center p-2 rounded-2">
+              <span class="material-icons-sharp fs-1">medication</span>
+            </div>
+            <div>
+              <h4 class="fs-4 mb-0">Pharmacy</h4>
+              <p class="fs-6 mb-0">15.11.2021</p>
+            </div>
+          </div>
+          <div class="d-flex gap-3">
+            <div class="bg-danger d-flex align-items-center justify-content-center px-2 py-1 rounded-3">
+              <img src="./assets/img/master card.png" class="img-fluid" style="width: 50px; "/>
+            </div>
+            <div>
+              <p class="fs-5 mb-0">*1920</p>
+              <small class="fs-6 fs-lg-4">Credit Card</small>
+            </div>
+          </div>
+          <h4 class="mb-0 fs-4">-$30</h4>
+        </div>
+        <div class="d-flex align-items-center justify-content-between mb-5">
+          <div class="d-flex align-items-center gap-3">
+            <div class="bg-info-subtle d-flex align-items-center justify-content-center p-2 rounded-2">
+              <span class="material-icons-sharp fs-1">shopping_bag</span>
+            </div>
+            <div>
+              <h4 class="fs-4 mb-0">Shopping</h4>
+              <p class="fs-6 mb-0">15.11.2021</p>
+            </div>
+          </div>
+          <div class="d-flex gap-3">
+            <div class="bg-warning d-flex align-items-center justify-content-center px-2 rounded-3">
+              <img src="./assets/img/visa.png" class="img-fluid" style="width: 60px; "/>
+            </div>
+            <div>
+              <p class="fs-5 mb-0">*1920</p>
+              <small class="fs-6 fs-lg-4">Credit Card</small>
+            </div>
+          </div>
+          <h4 class="mb-0 fs-4">-$30</h4>
+        </div>
+      </div>
     </main>
+    <script src="/res.js"></script>
   </body>
 </html>
