--- a/wallet.html
+++ b/wallet.html
@@ -175,8 +175,7 @@
                 />
               </div>
               <div>
-                <h4 class="fs-3 text-capitalize mb-1"></h4>
-                euro
+                <h4 class="fs-3 text-capitalize mb-1">Euro</h4>
                 <p class="mb-0 text-uppercase">eu</p>
               </div>
             </div>
